8284274: Error reporting crashes because missing ResourceMarks